# latex-table-editor

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
latex-table-editor/: conversion.py  highlighting.py  ltm_app.py  table.py  utils.py
latex_table_editor/: cli.py  conversion.py  highlighting.py  lte_app.py  table.py  utils.py
src/: conversion.py  highlighting.py  interactive.py  main.py  p2l_ui.py  p2l_ui.tcss  p2l_ui2.py  table.py  utils.py
tests/: test_highlighting.py  test_main.py  test_table.py
