[project]
name = "latex-table-editor"
version = "0.1.0"
description = "Manipulate LaTeX tables with ease."
authors = [
    {name = "Dominik Muhle", email = "dominik.muhle@tum.de"}
]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.4",
    "pandas>=2.2.3",
    "textual>=0.87.1",
]
[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
[tool.pytest.ini_options]
pythonpath = "latex_table_editor"

[project.scripts]
lte = "latex_table_editor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"